<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

   <RelativeLayout
       android:id="@+id/mainContainer"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="visible">

       <LinearLayout
           android:id="@+id/addressContainer"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/address"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="24sp"
               android:text="@string/location"/>

           <TextView
               android:id="@+id/updated_at"
               android:textSize="14sp"
               android:text="@string/updated_at"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>

       <LinearLayout
           android:id="@+id/overviewContainer"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_centerInParent="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/status"
               android:textSize="18sp"
               android:gravity="center"
               android:text="@string/clear_sky"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/temp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="sans-serif-thin"
               android:gravity="center"
               android:text="@string/_30_c"
               android:textSize="90sp" />

           <LinearLayout
               android:orientation="horizontal"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/temp_min"
                   android:text="@string/min_temp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>

               <Space
                   android:layout_width="50dp"
                   android:layout_height="wrap_content"/>

               <TextView
                   android:id="@+id/temp_max"
                   android:text="@string/max_temp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/detailsContainer"
           android:orientation="vertical"
           android:layout_alignParentBottom="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:orientation="horizontal"
               android:weightSum="3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/sunrise"
                       app:tint="#FFF"
                       android:contentDescription="@string/sunrise" />
                   
                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/sunrise"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/sunrise"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/_5_30am"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/sunset"
                       app:tint="#FFF"
                       android:contentDescription="@string/sunset" />

                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/sunset"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/sunset"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/_5_30am"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/wind"
                       app:tint="#FFF"
                       android:contentDescription="@string/wind" />

                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/wind"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/wind"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/_5_30am"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>

           </LinearLayout>
           
           <Space
               android:layout_width="wrap_content"
               android:layout_height="10dp"/>

           <LinearLayout
               android:orientation="horizontal"
               android:weightSum="3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/pressure"
                       app:tint="#FFF"
                       android:contentDescription="@string/pressure" />

                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/pressure"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/pressure"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/_5_30am"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/humidity"
                       app:tint="#FFF"
                       android:contentDescription="@string/humidity" />

                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/humidity"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/humidity"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/_5_30am"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
               <LinearLayout
                   android:orientation="vertical"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:padding="8dp"
                   android:background="#3CF1EBF1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/info"
                       app:tint="#FFF"
                       android:contentDescription="@string/created_by" />

                   <Space
                       android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                   <TextView
                       android:textSize="12sp"
                       android:text="@string/created_by"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
                   <TextView
                       android:id="@+id/info"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="14sp"
                       android:text="@string/saadullah_tariq"/>

               </LinearLayout>
               <Space
                   android:layout_width="10dp"
                   android:layout_height="wrap_content"/>

           </LinearLayout>
           
       </LinearLayout>

   </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>